feat: 기존 DTO 구조 재구성 및 MapStruct 기반 매퍼 계층 도입
[변경사항 요약]
- 기존 Inner Record 기반 DTO 구조를 Flat 형식으로 분리 및 재구성
- MapStruct 라이브러리 도입을 통한 Entity-DTO 매핑 자동화 및 간소화
- 매퍼 컴포넌트 도입과 DTO 구조 재구성에 따른 Service, Controller 리팩터링 수행